--- a/src/app/json-feed/json-feed.component.html
+++ b/src/app/json-feed/json-feed.component.html
@@ -5,14 +5,32 @@
     <div class="object-contents">
       <div class="simple-field">
         <span class="comment">// Hexical Labs is the original creator of devRant</span>
-        <span class="field">devRant</span>: <a href="https://devRant.io/feed" target="_blank"
-                                               class="string">"https://devRant.io/feed",</a>
+        <span class="field">devRant</span>: <a href="https://devRant.io/feed/{{sort}}" target="_blank"
+                                               class="string">"https://devRant.io/feed/{{sort}}"</a>,
       </div>
       <div class="simple-field">
         <span class="comment">// ChappIO (me 😀) is the creator of this (unofficial) code version of devRant</span>
         <span class="field">creator</span>: <a href="https://github.com/ChappIO/" target="_blank"
-                                               class="string">"https://github.com/ChappIO/"</a>
+                                               class="string">"https://github.com/ChappIO/"</a>,
       </div>
+
+      <span class="comment">// Click any of these links to change the sorting mode</span>
+      <span class="field">sort</span>: <span class="object-start">{</span>
+      <div class="object-contents">
+        <div class="simple-field">
+          <span class="field">algo</span>: <a href="/algo"
+                                              class="string">http://jsrant.com/algo</a>,
+        </div>
+        <div class="simple-field">
+          <span class="field">recent</span>: <a href="/recent"
+                                                class="string">http://jsrant.com/recent</a>,
+        </div>
+        <div class="simple-field">
+          <span class="field">top</span>: <a href="/top"
+                                             class="string">http://jsrant.com/top</a>
+        </div>
+      </div>
+      <span class="object-end">}</span>
     </div>
     <span class="object-end">},</span>
     <span class="field">rants</span>: <span class="array-start">[</span>
@@ -70,16 +88,20 @@
                     <span class="field">score</span>: <span class="number">{{comment.score}}</span>,
                   </div>
                 </div>
-                <span class="object-end">}</span><span *ngIf="i < rant.comments.length - 1">,</span>
+                <span class="object-end">}<span *ngIf="i < rant.comments.length - 1">,</span></span>
               </div>
             </div>
-            <span class="array-end">]</span>
+            <span class="array-end">],</span>
           </div>
         </div>
         <span class="object-end">}<span *ngIf="i < rants.length - 1">,</span></span>
       </div>
     </div>
-    <span class="array-end">]</span>
+    <span class="array-end">],</span>
+    <div class="simple-field" *ngIf="rants.length > 0">
+      <span class="comment">// Click here to load more rants</span>
+      <span class="field">loadMoreRants</span>: <a class="string" (click)="getMoreRants()">"CLICK HERE"</a>
+    </div>
   </div>
   <span class="object-end">};</span>
 </div>
