Convert to single page app for github pages

--- a/src/app/json-feed/json-feed.component.html
+++ b/src/app/json-feed/json-feed.component.html
@@ -18,16 +18,16 @@
       <span class="field">sort</span>: <span class="object-start">{</span>
       <div class="object-contents">
         <div class="simple-field">
-          <span class="field">algo</span>: <a href="/algo"
-                                              class="string">http://jsrant.com/algo</a>,
+          <span class="field">algo</span>: <a href="/?sort=algo"
+                                              class="string">http://jsrant.com/?sort=algo</a>,
         </div>
         <div class="simple-field">
-          <span class="field">recent</span>: <a href="/recent"
-                                                class="string">http://jsrant.com/recent</a>,
+          <span class="field">recent</span>: <a href="/?sort=recent"
+                                                class="string">http://jsrant.com/?sort=recent</a>,
         </div>
         <div class="simple-field">
-          <span class="field">top</span>: <a href="/top"
-                                             class="string">http://jsrant.com/top</a>
+          <span class="field">top</span>: <a href="/?sort=top"
+                                             class="string">http://jsrant.com/?sort=top</a>
         </div>
       </div>
       <span class="object-end">}</span>
